--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,19 @@
 spring:
+  datasource:
+    username: sa
+    url: jdbc:h2:file:./data/event-hub-api-db
+    driverClassName: org.h2.Driver
+    password:
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      settings.trace: false
+      settings.web-allow-others: false
   rabbitmq:
     host: localhost
     port: 5672
